--- a/frontend/todo-app/src/components/counter/Counter.css
+++ b/frontend/todo-app/src/components/counter/Counter.css
@@ -19,3 +19,11 @@ button {
 body {
     padding : 15px 30px;
 }
+
+.footer {
+    position : absolute;
+    height : 40px;
+    width : 100%;
+    bottom: 0px;
+    background-color: #222222
+}
